--- a/src/Components/NewsLetter/NewsLetter.css
+++ b/src/Components/NewsLetter/NewsLetter.css
@@ -8,7 +8,7 @@
     margin: auto;
     padding: 0px 140px;
     margin-bottom: 150px;
-    background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22);
+    background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
     gap: 30px;
 }
 
@@ -20,7 +20,7 @@
 
 .newsletter p {
     color: #454545;
-    font-size: 20px0;
+    font-size: 20px;
 }
 
 .newsletter div {
